bppackaging/src/objects/HomeSearch_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Additional_Fields_1__c</fullName>
        <label>Additional Fields 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Fields_2__c</fullName>
        <label>Additional Fields 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Fields_3__c</fullName>
        <label>Additional Fields 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Home Search Setting</label>
    <pluralLabel>Home Search Settings</pluralLabel>
</CustomObject>